# internal/adapters/http/router.go
@@ -2,13 +2,19 @@ package http
 
 import (
 	"event-driven-architecture/internal/application/account/command"
+	usercommand "event-driven-architecture/internal/application/user/command"
 
 	"github.com/gin-gonic/gin"
 )
 
-func NewRouter(createAccount command.CreateAccountUseCase) *gin.Engine {
+func NewRouter(createAccount command.CreateAccountUseCase, createUser usercommand.CreateUserUseCase) *gin.Engine {
 	router := gin.Default()
-	controller := NewAccountController(createAccount)
-	router.POST("/accounts", controller.Create)
+
+	accountController := NewAccountController(createAccount)
+	router.POST("/accounts", accountController.Create)
+
+	userController := NewUserController(createUser)
+	router.POST("/users", userController.Create)
+
 	return router
 }
